--- a/ToDoApp/ClientApp/src/components/todoitem/Styles.css
+++ b/ToDoApp/ClientApp/src/components/todoitem/Styles.css
@@ -1,30 +1,7 @@
 ﻿body {
 }
 
-.todoItem {
-    overflow: hidden;
-    border-style: double;
-}
-
-.itemName {
-    color: navy;
-    display: inline-block;
-    font-size: 40px;
-}
-
-.completedCheckBox {
-    padding-left: 10px;
-    display: inline-block;
-    transform: scale(1.5);
-}
-
-.completedCheckBox input {
-    z-index: -9999;
-}
-
-.completedCheckBox span {
-    width: 20px;
-    height: 20px;
-    display: block;
-    /*background: url("link_to_image");*/
+.list-group-item {
+    margin-top: 10px;
+    font-size: 20px;
 }
